{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 34,
  "lineage": "6f27882c-c566-b9bf-5594-bc374faf2eb6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_allow_zanzigo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-09T05:53:42.041-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nvoss-test/global/firewalls/allow-zanzigo",
            "log_config": [],
            "name": "allow-zanzigo",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "priority": 1000,
            "project": "nvoss-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/firewalls/allow-zanzigo",
            "source_ranges": [
              "10.0.0.0/16",
              "10.1.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-16T09:04:56.429-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nvoss-test/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "priority": 1000,
            "project": "nvoss-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "services_private_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.196.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-12-16T09:04:56.549-08:00",
            "id": "projects/nvoss-test/global/addresses/services-private-ips",
            "name": "services-private-ips",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "prefix_length": 16,
            "project": "nvoss-test",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/addresses/services-private-ips"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bench",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20231212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west1-c/disks/bench-europe-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nvoss-test/zones/europe-west1-c/instances/bench-europe-west1",
            "instance_id": "7627391639097480344",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "WFzCejFt7lY=",
            "name": "bench-europe-west1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "ipv6_address": "2600:2d00:4013:24e3:a00:3:0:0",
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west1/subnetworks/bench-europe-west1",
                "subnetwork_project": "nvoss-test"
              }
            ],
            "project": "nvoss-test",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west1-c/instances/bench-europe-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnetworks",
            "google_project_service.services"
          ]
        },
        {
          "index_key": "europe-west4",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20231212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west4-c/disks/bench-europe-west4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nvoss-test/zones/europe-west4-c/instances/bench-europe-west4",
            "instance_id": "3601230343105975449",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "WFzCejFt7lY=",
            "name": "bench-europe-west4",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "ipv6_address": "2600:2d00:4061:95b8:a01:2:0:0",
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west4/subnetworks/bench-europe-west4",
                "subnetwork_project": "nvoss-test"
              }
            ],
            "project": "nvoss-test",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west4-c/instances/bench-europe-west4",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-c"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnetworks",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "zanzigo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20231212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west1-b/disks/zanzigo-europe-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nvoss-test/zones/europe-west1-b/instances/zanzigo-europe-west1",
            "instance_id": "568937012123440512",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "WFzCejFt7lY=",
            "name": "zanzigo-europe-west1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "ipv6_address": "2600:2d00:4013:24e3:a00:5:0:0",
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west1/subnetworks/bench-europe-west1",
                "subnetwork_project": "nvoss-test"
              }
            ],
            "project": "nvoss-test",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/zones/europe-west1-b/instances/zanzigo-europe-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnetworks",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nvoss-test/global/networks/bench",
            "mtu": 0,
            "name": "bench",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "nvoss-test",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench"
          },
          "dependencies": [
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-16T09:04:58.990-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/nvoss-test/regions/europe-west1/routers/bench-router-europe-west1",
            "name": "bench-router-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "project": "nvoss-test",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west1/routers/bench-router-europe-west1"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        },
        {
          "index_key": "europe-west4",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-09T03:12:58.709-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/nvoss-test/regions/europe-west4/routers/bench-router-europe-west4",
            "name": "bench-router-europe-west4",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "project": "nvoss-test",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west4/routers/bench-router-europe-west4"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "router_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1",
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "nvoss-test/europe-west1/bench-router-europe-west1/bench-nat-europe-west1",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "bench-nat-europe-west1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "nvoss-test",
            "region": "europe-west1",
            "router": "bench-router-europe-west1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.router",
            "google_project_service.services"
          ]
        },
        {
          "index_key": "europe-west4",
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "nvoss-test/europe-west4/bench-router-europe-west4/bench-nat-europe-west4",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "bench-nat-europe-west4",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "nvoss-test",
            "region": "europe-west4",
            "router": "bench-router-europe-west4",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.router",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetworks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-16T09:04:57.956-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/nvoss-test/regions/europe-west1/subnetworks/bench-europe-west1",
            "ip_cidr_range": "10.0.0.0/16",
            "ipv6_cidr_range": "2600:2d00:4013:24e3:0:0:0:0/64",
            "name": "bench-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "ENABLE_OUTBOUND_VM_ACCESS_TO_GOOGLE",
            "project": "nvoss-test",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west1/subnetworks/bench-europe-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        },
        {
          "index_key": "europe-west4",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-09T03:13:16.756-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/nvoss-test/regions/europe-west4/subnetworks/bench-europe-west4",
            "ip_cidr_range": "10.1.0.0/16",
            "ipv6_cidr_range": "2600:2d00:4061:95b8:0:0:0:0/64",
            "name": "bench-europe-west4",
            "network": "https://www.googleapis.com/compute/v1/projects/nvoss-test/global/networks/bench",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "ENABLE_OUTBOUND_VM_ACCESS_TO_GOOGLE",
            "project": "nvoss-test",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nvoss-test/regions/europe-west4/subnetworks/bench-europe-west4",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_project_service.services"
          ]
        }
      ]
    }
  ]
}